Added counter test cases in feature-xyz branch

--- a/README
+++ b/README
@@ -1,2 +1,4 @@
 VLSI Design Project Overview and Specifications
 Version 1.0 - Initial VLSI Design Setup. Includes RTL Files and Basic verification flow.
+Added: New design flow details for verification.
+Added new testcases
